# python_template

./: README.md  copier.yaml
python-template/: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCS.md.jinja  Makefile.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
python-template/docs/: docs.md
python-template/playground/: playground.py.jinja
python-template/scripts/: build.sh  docker-build.sh.jinja  github-pages.sh  github-tag.sh  init-docs.sh  lint.sh.jinja  print-version.sh  sync.sh  tests.sh  type-check.sh  {% if 'lambda' in services_support %}lambdas-build.sh{% endif %}
python-template/scripts/docker/: dockerfile.jinja
python-template/scripts/mkdocs/: gen_ref_pages.py
python-template/src/{{project_slug_underscore}}/: __init__.py  example.py  main.py.jinja
python-template/tests/: __init__.py  test_hello.py.jinja
python-template/{% if 'lambda' in services_support %}lambdas{% endif %}/: README.md
python-template/{% if 'lambda' in services_support %}lambdas{% endif %}/lambda_example/: pyproject.toml
