[project]
name = "lambda-example"
description = "Lambda example"
dependencies = []
dynamic = ["version"]

[tool.lambda_settings]
# Set create_layer to true if you want to package Lambda dependencies in a separate zip archive, following the required structure to build a Lambda layer
# By leaving create_layer to false, Lambda dependencies will be packaged with the Lambda code in the same archive.
create_layer = false